fix code in docs on mobile

--- a/docs/utils.css
+++ b/docs/utils.css
@@ -5,7 +5,8 @@
 }
 
 .tryme pre {
-    min-width: 100%;
+    width: 100%;
+    overflow: scroll;
     margin-top: 0;
 }
 
